--- a/myapp/templates/myapp/home.html
+++ b/myapp/templates/myapp/home.html
@@ -14,7 +14,7 @@
     <p>Use the links below to import a patent description or view the classification results.</p>
     <a href="{% url 'import_patent' %}" class="button">Importer un brevet</a>
     <a href="{% url 'classification_result' pk=1 %}" class="button">ClassificationResult object (1)</a>
-    <a href="{% url 'explain_view' sample_index=0 %}" class="button">Voir l'explication pour l'échantillon 0</a>
+    <a href="{% url 'explain_view' index=0 %}" class="button">Voir l'explication pour l'échantillon 0</a>
 </section>
 
 <section id="example" class="example">
