Bug réglé entre import patent et home/resources

--- a/myapp/templates/myapp/home.html
+++ b/myapp/templates/myapp/home.html
@@ -15,9 +15,10 @@
         <p>Use the links below <br> to import a patent description or view <br> the classification results.</p>
         </div>
     </div>
-    <a href="{% url 'import_patent' %}" class="button">Importer un brevet</a>
+    <a href="{% url 'home' %}#home" class="button">Importer un brevet</a>
     <a href="{% url 'classification_result' pk=1 %}" class="button">ClassificationResult object (1)</a>
     <a href="{% url 'explain_view' index=0 %}" class="button">Voir l'explication pour l'échantillon 0</a>
+
 </section>
 
 <section id="resources" class="resources">
