--- a/myapp/static/css/styles.css
+++ b/myapp/static/css/styles.css
@@ -34,21 +34,14 @@ header {
 #navbar {
     display: flex;
     justify-content: center;
-    padding: 10px 20px; /* Padding commun pour les deux états */
+    padding: 10px 20px;
     transition: all 0.5s;
 }
 
 #navbar.default {
-    background-color: transparent; /* Pas de couleur de fond */
+    background-color: transparent;
 }
 
-#navbar.scrolled {
-    background-color: rgba(37, 39, 77, 0.8); /* Couleur de fond avec opacité */
-    border-radius: 50px;
-    margin: 20px auto;
-    width: 33%;
-    max-width: 90%;
-}
 
 #navbar ul {
     list-style: none;
@@ -94,7 +87,7 @@ section {
 }
 
 footer {
-    background-color: #25274D;
+    background: linear-gradient(to bottom, #343588, #1a1b49);
     color: #fff;
     text-align: center;
     padding: 20px 0;
@@ -102,39 +95,49 @@ footer {
     position: relative;
 }
 .navbar-logo {
-    height: 30px; /* Ajustez la hauteur selon vos besoins */
-    width: auto; /* Maintient le ratio de l'image */
+    height: 22px;
+    width: auto;
 }
 
 .welcome-text {
-    font-size: 40px;
+    position : absolute;
+    font-size: 45px;
     font-family: Dubai;
     text-align: left;
-    margin-bottom: 100px; /* Marge en bas pour l'espace */
-    margin-right: 450px;
+    margin-right: 750px;
+    top : 150px;
 }
 
 .welcome-text2 {
     font-size: 25px;
     font-family: "Gill Sans MT";
     text-align: left;
-    margin-bottom: 20px; /* Marge en bas pour l'espace */
+    margin-bottom: 20px;
 }
 .button {
-    display: inline-block; /* Affiche les boutons en ligne */
+    display: inline-block;
     padding: 10px ;
     font-family: Dubai;
-    background-color: #294c9d; /* Couleur de fond initiale du bouton */
-    color: #fff; /* Couleur du texte */
+    background-color: #294c9d;
+    color: #fff;
     text-decoration: none;
-    border: none; /* Supprime le bord du lien */
-    border-radius: 25px; /* Arrondi des coins */
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Ombre par défaut */
-    transition: background-color 0.3s ease, box-shadow 0.3s ease; /* Transition fluide pour la couleur de fond et l'ombre */
+    border: none;
+    border-radius: 25px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s ease, box-shadow 0.3s ease;
     margin-bottom: 15px;
 }
 
 .button:hover {
-    background-color: #0056b3; /* Couleur de fond au survol */
-    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2); /* Ombre au survol */
+    background-color: #0056b3;
+    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
 }
+
+.boutons {
+    display : flex;
+    position : absolute;
+    top : 390px;
+    left : 750px;
+    gap : 10px;
+}
+
