--- a/myapp/templates/myapp/home.html
+++ b/myapp/templates/myapp/home.html
@@ -10,22 +10,17 @@
 {% block content %}
 <section id="home" class="intro">
     <div class ="welcome-text">
-        <p> <strong> Welcome to <br> my patent classification <br> app !</strong></p>
+        <p> <strong> Welcome to <br> our patent classification <br> app !</strong></p>
         <div class ="welcome-text2">
-        <p>Use the links below <br> to import a patent description or view <br> the classification results.</p>
+        <p>Use the links to import<br> a patent description or view <br> the classification results.</p>
         </div>
     </div>
-    <a href="{% url 'import_patent' %}" class="button">Importer un brevet</a>
+    <div class = "boutons">
+    <div class ="bouton-import"><a href="{% url 'import_patent' %}" class="button">Importer un brevet</a></div>
     <a href="{% url 'classification_result' pk=1 %}" class="button">ClassificationResult object (1)</a>
     <a href="{% url 'explain_view' index=0 %}" class="button">Voir l'explication pour l'échantillon 0</a>
+    </div>
 </section>
 
-<section id="resources" class="resources">
-    <h2>Resources</h2>
-    <ul>
-        <li><a href="#">How to import a patent description</a></li>
-        <li><a href="#">Understanding classification results</a></li>
-        <li><a href="#">Contact support</a></li>
-    </ul>
-</section>
+
 {% endblock %}
