--- a/myapp/templates/myapp/import_patent.html
+++ b/myapp/templates/myapp/import_patent.html
@@ -2,11 +2,22 @@
 
 {% block title %}Import Patent{% endblock %}
 
+{% block extra_head %}
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/import.css' %}">
+{% endblock %}
+
+
 {% block content %}
-<h1>Import Patent Description</h1>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Submit</button>
-</form>
+<section id="import" class="intro">
+    <section id="import-conteneur" class ="conteneur">
+        <h1 class ="import-title">Import Patent Description</h1>
+        <form method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit">Submit</button>
+        </form>
+    </section>
+</section>
+
 {% endblock %}
