--- a/templates/base.html
+++ b/templates/base.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}{% endblock %} - My Patent Classification App</title>
-    {% load static %}
+    <title>{% block title %}My Patent Classification App{% endblock %}</title>
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
     {% block extra_head %}
+    <!-- Inclure le lien vers home.css si nécessaire -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}">
+    {% endblock %}
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             const hash = window.location.hash;
@@ -19,23 +21,16 @@
             }
         });
     </script>
-    {% endblock %}
-
 </head>
 <body>
     <header>
         <nav id="navbar">
             <ul>
-                <a href="{% url 'home' %}#home" class="logo">
-                <img src="{% static 'images/logo.png' %}"  class="navbar-logo">
-
-            </a>
-
-                </a>
-
-
+                <li><a href="{{ url_for('home') }}#home" class="logo">
+                    <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Logo" class="navbar-logo">
+                </a></li>
+                <!-- Ajoutez d'autres liens de navigation ici si nécessaire -->
             </ul>
-
         </nav>
     </header>
     <main>
@@ -45,7 +40,7 @@
     <footer>
         <p>© 2024 My Patent Classification App. All rights reserved.</p>
     </footer>
-    <script src="{% static 'js/navbar.js' %}"></script>
+    <script src="{{ url_for('static', filename='js/navbar.js') }}"></script>
     <script>
         document.addEventListener("DOMContentLoaded", function () {
             window.scrollTo(0, 0);
