--- a/static/css/home.css
+++ b/static/css/home.css
@@ -4,6 +4,7 @@
     color: #fff;
 }
 
+
 .example {
     background: #AAABB8;
     padding: 100px 20px;
@@ -26,8 +27,10 @@ footer {
 }
 
  table {
-        width: 100%;
+        font-family: Dubai;
+        width: 80%;
         border-collapse: collapse;
+         margin: 0 auto;
     }
     th, td {
         padding: 8px;
@@ -41,24 +44,37 @@ footer {
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
-        max-width: 300px;  /* Adjust as needed */
+        max-width: 300px;
     }
     .pagination {
         margin: 20px 0;
         text-align: center;
     }
     .pagination a {
+        font-family: Dubai;
         margin: 0 5px;
         padding: 5px 10px;
         text-decoration: none;
-        border: 1px solid #ddd;
         color: #007bff;
+        transition: transform 0.3s ease, font-size 0.3s ease;
     }
     .pagination a:hover {
-        background-color: #007bff;
         color: white;
+        transform: scale(1.2); /    font-size: 1.2em;
     }
     .pagination span {
+        font-family: span;
         margin: 0 5px;
         padding: 5px 10px;
     }
+
+.application-number {
+    text-decoration: underline;
+    transition: transform 0.3s ease, font-size 0.3s ease;
+}
+
+.application-number:hover {
+    transform: scale(1.2);  /
+    font-size: 1.2em;
+}
+
