--- a/static/css/import.css
+++ b/static/css/import.css
@@ -9,7 +9,8 @@
     color: #ffffff;
     border-radius: 8px;
     padding: 20px;
-    max-width: 1100px;
+    max-width: 800px;
+    max-height: 20px;
     margin: 50px auto;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
