--- a/templates/explain.html
+++ b/templates/explain.html
@@ -17,7 +17,7 @@
 
 {% block content %}
 <div class="explain-body">
-    <h1>Explication LIME</h1>
+    <h1 class ="explication-lime">Explication LIME</h1>
     <p><strong>Brevet n°{{ explanation.application_number }} :</strong></p>
     <div class="lime-explanation">
         <div class="lime-prediction">
