--- a/static/css/explain.css
+++ b/static/css/explain.css
@@ -1,6 +1,11 @@
 body {
     font-family: Arial, sans-serif;
-    margin: 20px;
+    margin: 10px;
+    margin-bottom: 150px;
+}
+
+.explication-lime{
+    font-family: Dubai;
 }
 
 textarea {
