--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,3 +1,5 @@
+
+
 .intro {
     background: linear-gradient(to bottom, #66b3ff, #343588);
     padding: 100px 20px;
@@ -76,5 +78,27 @@ footer {
 .application-number:hover {
     transform: scale(1.2);  /
     font-size: 1.2em;
+}
+
+.search-section {
+    max-width : 380px;
+    font-family: Dubai;
+    background-color: #f2f2f2;
+    margin-left: 154px;
+    margin-bottom : 15px;
+    border-radius : 40px
+}
+
+.formulaire-recherche {
+    margin-left: 20px;
+}
+
+.search-form {
+
+}
+
+.bouton-import{
+    margin-left: 300px;
+    margin-top : -25px;
 }
 
