--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,9 +1,9 @@
-
-
 .intro {
-    background: linear-gradient(to bottom, #66b3ff, #343588);
-    padding: 100px 20px;
+    background: linear-gradient(to right, #66b3ff, #343588);
+    max-width: 100%;
+    padding: 10% 5%;
     color: #fff;
+
 }
 
 
@@ -27,12 +27,19 @@ footer {
     width: 100%;
     position: relative;
 }
-
+.table-title{
+    color : white;
+    font-family: Dubai;
+    font-size: 35px;
+    position : absolute;
+    top : 1100px;
+}
  table {
+        position : absolute;
         font-family: Dubai;
         width: 80%;
-        border-collapse: collapse;
-         margin: 0 auto;
+        margin: 0 auto;
+        top : 1250px;
     }
     th, td {
         padding: 8px;
@@ -40,7 +47,8 @@ footer {
         border: 1px solid #ddd;
     }
     th {
-        background-color: #f2f2f2;
+        background-color: #233b75;
+        color : white;
     }
     .truncate {
         white-space: nowrap;
@@ -49,7 +57,8 @@ footer {
         max-width: 300px;
     }
     .pagination {
-        margin: 20px 0;
+        position : absolute;
+        top : 1940px;
         text-align: center;
     }
     .pagination a {
@@ -57,7 +66,7 @@ footer {
         margin: 0 5px;
         padding: 5px 10px;
         text-decoration: none;
-        color: #007bff;
+        color: #fff;
         transition: transform 0.3s ease, font-size 0.3s ease;
     }
     .pagination a:hover {
@@ -83,22 +92,81 @@ footer {
 .search-section {
     max-width : 380px;
     font-family: Dubai;
-    background-color: #f2f2f2;
-    margin-left: 154px;
-    margin-bottom : 15px;
-    border-radius : 40px
+    background-color: #233b75 ;
+    color : white;
+    border-radius : 40px;
+    position : absolute;
+    top : 1180px;
+    left: 200px;
 }
 
 .formulaire-recherche {
-    margin-left: 20px;
+    margin-left: 25px;
+    margin-right: 15px;
 }
 
-.search-form {
+.search-button{
+    cursor: pointer;
+}
 
+.reset-button{
+    cursor: pointer;
+}
+
+.search-button{
+    cursor: pointer;
+}
+
+.reset-button{
+    cursor: pointer;
 }
 
 .bouton-import{
-    margin-left: 300px;
-    margin-top : -25px;
+    margin-top : 5vb;
 }
 
+
+
+.table-sample{
+    background: linear-gradient(to right, #66b3ff, #343588);
+
+}
+
+.accueil-patent{
+    position : absolute;
+    left : 750px;
+    top: 30px;
+    width : 65%;
+}
+
+
+.robot_gif{
+    top : 350px;
+    left : 1085px;
+    position : absolute;
+    height: 200px;
+    width : 350px;
+}
+
+.welcome_robot_gif{
+    top : 40px;
+    right : 1210px;
+    position : absolute;
+    height: 200px;
+    width : 350px;
+}
+
+.crafting_robot_gif{
+     top : 67vb;
+    left : 63vb;
+    position : absolute;
+    height: 200px;
+    width : 350px;
+}
+
+
+
+img {
+    max-width: 100%;
+    height: auto;
+}
